--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
   </style>
 </head>
 <body>
-  <section class="container mt-4" style="box-shadow: 2px 2px 5px blue; padding: 0; background-color: rgb(232, 237, 237);">
-    <header class="bg-primary text-white p-2 text-center">
-      <h2>Chatbot</h2>
+  <section class="container mt-4" style="box-shadow: 2px 2px 5px #15e79a;; padding: 0; background-color: rgb(229, 235, 238);">
+    <header class="text-white p-2 text-center " style="background-color: #15e79a;;">
+      <h2><img src="static\image\logo humg.jpg" width="30px" height="30px" alt=""> Chatbot</h2>
     </header>
     <main class="boxchat p-3 msg-container">
       <div class="msg">
@@ -39,11 +39,11 @@
     <form class="msg-input">
       <div class="input-group">
         <input type="text" class="textInput form-control" placeholder="Hãy nhập câu hỏi vào đây...">
-        <div class="input-group-append">
-          <button type="submit" class="btn btn-primary">Send</button>
+        <div class="input-group-append" style="background-color: #7FFFD4;border: 1px solid rgb(25, 235, 133);">
+          <button type="submit" class="btn">Send</button>
         </div>
-        <div class="input-group-append">
-          <button type="button" class="micButton btn btn-primary" id="micButton" ><i class="bi bi-mic"></i></button>
+        <div class="input-group-append" style="background-color: #7FFFD4;border: 1px solid rgb(36, 228, 77);" >
+          <button type="button" class="micButton btn " id="micButton" ><i class="bi bi-mic"></i></button>
         </div>
       </div>
     </form>
